language/move-prover/tests/sources/functional/schema_exp.exp
Move prover returns: exiting with boogie verification errors
error: abort not covered by any of the `aborts_if` clauses

    ┌── tests/sources/functional/schema_exp.move:25:5 ───
    │
 25 │ ╭     fun bar_incorrect(c: bool) {
 26 │ │         if (!c) abort(1);
 27 │ │     }
    │ ╰─────^
    ·
 26 │         if (!c) abort(1);
    │         ---------------- abort happened here
    │
    =     at tests/sources/functional/schema_exp.move:25:5: bar_incorrect (entry)
    =     at tests/sources/functional/schema_exp.move:26:9: bar_incorrect (ABORTED)

error:  A postcondition might not hold on this return path.

    ┌── tests/sources/functional/schema_exp.move:47:9 ───
    │
 47 │         ensures result == i + 2;
    │         ^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/schema_exp.move:53:5: baz_incorrect (entry)
    =     at tests/sources/functional/schema_exp.move:54:11: baz_incorrect
    =         result = <redacted>
    =     at tests/sources/functional/schema_exp.move:53:5: baz_incorrect (exit)
